safari on ios doesn't bug out if first line starts at 77px
otherwise, there is lag between keyboard typing and the letters showing
on the screen

--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -243,11 +243,11 @@ textarea {
 
 @media (max-width: 768px) {
   .chatroom {
-    bottom: 53px;
+    bottom: 77px;
   }
 
   .input {
-    height: 53px;
+    height: 77px;
     padding: 0;
   }
 
